# s3-uploader

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  tests.rs
