[package]
name = "s3-uploader"
version = "0.1.0"
edition = "2021"
description = "Minimal, fast CLI for uploading files to Amazon S3 and compatible services (Cloudflare R2, MinIO). Supports pipe input and progress bars."
license = "MIT"
repository = "https://github.com/tanxme/s3-uploader"
readme = "README.md"
keywords = ["s3", "aws", "upload", "cli", "r2", "minio", "cloudflare", "pipe"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization
codegen-units = 1     # single codegen unit, better optimization
panic = "abort"       # strip panic unwinding code
strip = "symbols"     # strip debug symbols

[dependencies]
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
bytes = "1"
hyper_0_14 = { version = "0.14", package = "hyper" }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "sync"] }
