[package]
name = "s3-uploader"
version = "0.1.5"
edition = "2021"
description = "Minimal, fast CLI for uploading files to Amazon S3 and compatible services (Cloudflare R2, MinIO). Supports pipe input and progress bars."
license = "MIT"
repository = "https://github.com/c3qu/s3-uploader"
readme = "README.md"
keywords = ["s3", "upload", "cli", "cloudflare", "pipe"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
clap = { version = "4", features = ["derive", "env", "cargo"] }
indicatif = "0.17"
mime_guess = "2"
bytes = "1"
hyper_0_14 = { version = "0.14", package = "hyper" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util = { version = "0.7.18", features = ["io"] }
